--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
+    "dev": "cross-env NODE_ENV=development vite --host",
+    "build": "cross-env NODE_ENV=production vite build && npm run clean && npm run copy",
+    "start": "vite server.js",
+    "clean": "rimraf ../laravel/resources/views/welcome.blade.php && rimraf ../laravel/public/build/assets",
+    "copy": "ncp build/ ../laravel/public/build && ncp index.html ../laravel/resources/views/welcome.blade.php"
   },
   "dependencies": {
     "html5-qrcode": "^2.1.5",
@@ -18,6 +20,7 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.4",
     "sass": "^1.72.0",
-    "vite": "^5.1.6"
+    "vite": "^5.1.6",
+    "cross-env": "^7.0.3"
   }
 }
