--- a/package.json
+++ b/package.json
@@ -15,12 +15,13 @@
     "pinia": "^2.0.0-rc.10",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0",
+    "vue-upload-component": "^3.1.15",
     "vue3-datepicker": "^0.4.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.4",
+    "cross-env": "^7.0.3",
     "sass": "^1.72.0",
-    "vite": "^5.1.6",
-    "cross-env": "^7.0.3"
+    "vite": "^5.1.6"
   }
 }
