--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "copy": "ncp build/ ../laravel/public/build && ncp index.html ../laravel/resources/views/welcome.blade.php"
   },
   "dependencies": {
+    "axios": "^1.7.2",
     "html5-qrcode": "^2.1.5",
     "pinia": "^2.0.0-rc.10",
     "vue": "^3.4.21",
