--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "axios": "^1.7.2",
     "html5-qrcode": "^2.1.5",
+    "luxon": "^3.4.4",
     "pinia": "^2.0.0-rc.10",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0",
