--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "vue": "^3.4.21",
     "vue-router": "^4.3.0",
     "vue-upload-component": "^3.1.15",
-    "vue3-datepicker": "^0.4.0"
+    "vue3-datepicker": "^0.4.0",
+    "rimraf": "^4.4.1",
+    "ncp": "^2.0.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.4",
