--- a/package.json
+++ b/package.json
@@ -13,14 +13,15 @@
   "dependencies": {
     "axios": "^1.7.2",
     "html5-qrcode": "^2.1.5",
+    "laravel-vite-plugin": "^1.0.4",
     "luxon": "^3.4.4",
+    "ncp": "^2.0.0",
     "pinia": "^2.0.0-rc.10",
+    "rimraf": "^4.4.1",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0",
     "vue-upload-component": "^3.1.15",
-    "vue3-datepicker": "^0.4.0",
-    "rimraf": "^4.4.1",
-    "ncp": "^2.0.0"
+    "vue3-datepicker": "^0.4.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.4",
