--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "cross-env NODE_ENV=development vite --host",
+    "dev": "cross-env NODE_ENV=development mix vite --host",
     "build": "cross-env NODE_ENV=production vite build && npm run clean && npm run copy",
     "start": "vite server.js",
     "clean": "rimraf ../laravel/resources/views/welcome.blade.php && rimraf ../laravel/public/build/assets",
