--- a/package.json
+++ b/package.json
@@ -4,15 +4,13 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "serve": "cross-env NODE_ENV=development vite --host",
-    "dev": "cross-env NODE_ENV=development mix vite --host",
+    "dev": "cross-env NODE_ENV=development vite --host",
     "build": "cross-env NODE_ENV=production vite build && npm run clean && npm run copy",
     "start": "vite server.js",
     "clean": "rimraf ../laravel/resources/views/welcome.blade.php && rimraf ../laravel/public/build/assets",
     "copy": "ncp build/ ../laravel/public/build && ncp index.html ../laravel/resources/views/welcome.blade.php"
   },
   "dependencies": {
-    "@vitejs/plugin-legacy": "^5.4.1",
     "axios": "^1.7.2",
     "html5-qrcode": "^2.1.5",
     "laravel-vite-plugin": "^1.0.4",
