--- a/package.json
+++ b/package.json
@@ -11,21 +11,19 @@
     "copy": "ncp build/ ../laravel/public/build && ncp index.html ../laravel/resources/views/welcome.blade.php"
   },
   "dependencies": {
-    "axios": "^1.7.2",
-    "html5-qrcode": "^2.1.5",
     "laravel-vite-plugin": "^1.0.4",
-    "luxon": "^3.4.4",
-    "ncp": "^2.0.0",
-    "pinia": "^2.0.0-rc.10",
-    "rimraf": "^4.4.1",
+    "axios": "^1.7.2",
     "vue": "^3.4.21",
+    "html5-qrcode": "^2.1.5",
+    "luxon": "^3.4.4",
+    "pinia": "^2.0.0-rc.10",
+    "simple-vue-camera": "^1.1.3",
     "vue-router": "^4.3.0",
     "vue-upload-component": "^3.1.15",
     "vue3-datepicker": "^0.4.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.4",
-    "cross-env": "^7.0.3",
     "sass": "^1.72.0",
     "vite": "^5.1.6"
   }
